Revert "Commit of overflowing table bugfix. This will mean the cookie bar wil…"

--- a/web/themes/custom/bevan/sass/components/_layout.scss
+++ b/web/themes/custom/bevan/sass/components/_layout.scss
@@ -9,10 +9,3 @@
     right: 50%;
     width: 100vw;
 }
-
-@media only screen and (max-width : 768px) {
-	.contextual-region {
-		width: 100%;
-		overflow: scroll;
-	}
-}
